apps/base/paperless-ngx/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: paperless-ngx
spec:
  redirectScheme:
    scheme: https
    permanent: true
