apps/base/paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd,traefik-security-headers@kubernetescrd,traefik-rate-limit-standard@kubernetescrd,traefik-csp-report-only@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - paperless.h0melab.work
      secretName: paperless-ngx-tls-secret
  rules:
    - host: paperless.h0melab.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
